--- a/portfolio.html
+++ b/portfolio.html
@@ -48,138 +48,144 @@
 
     <main>
       <section class="work-exhamples-section">
-        <h1 hidden>Portfolio</h1>
-        <ul class="filter-buttons-list list">
-          <li class="filter-buttons-item">
-            <button class="exhample-filter-button" type="button">All</button>
-          </li>
-          <li class="filter-buttons-item">
-            <button class="exhample-filter-button" type="button">
-              Web Site
-            </button>
-          </li>
-          <li class="filter-buttons-item">
-            <button class="exhample-filter-button" type="button">App</button>
-          </li>
-          <li class="filter-buttons-item">
-            <button class="exhample-filter-button" type="button">Design</button>
-          </li>
-          <li class="filter-buttons-item">
-            <button class="exhample-filter-button" type="button">
-              Marketing
-            </button>
-          </li>
-        </ul>
-        <ul class="work-exhamples-list list">
-          <li class="work-exhample-item">
-            <a class="work-exhample-link link" href="">
-              <img
-                src="./images/portfolio/banking-app.jpg"
-                alt="Screens of babk applications"
-                width="360"
-                height="300"
-              />
-              <h2 class="work-exhample-title">Banking App Interface Concept</h2>
-              <p class="work-exhample-type">App</p>
-            </a>
-          </li>
-          <li class="work-exhample-item">
-            <a class="work-exhample-link link" href="">
-              <img
-                src="./images/portfolio/cashless-payment.jpg"
-                alt="Payment by mobile phone"
-                width="360"
-                height="300"
-              />
-              <h2 class="work-exhample-title">Cashless Payment</h2>
-              <p class="work-exhample-type">Marketing</p>
-            </a>
-          </li>
-          <li class="work-exhample-item">
-            <a class="work-exhample-link link" href="">
-              <img
-                src="./images/portfolio/meditation-app.jpg"
-                alt="Psychological application Screen"
-                width="360"
-                height="300"
-              />
-              <h2 class="work-exhample-title">Meditation App</h2>
-              <p class="work-exhample-type">App</p>
-            </a>
-          </li>
-          <li class="work-exhample-item">
-            <a class="work-exhample-link link" href="">
-              <img
-                src="./images/portfolio/taxi-service.jpg"
-                alt="taxi driver's application"
-                width="360"
-                height="300"
-              />
-              <h2 class="work-exhample-title">Taxi Service</h2>
-              <p class="work-exhample-type">Marketing</p>
-            </a>
-          </li>
-          <li class="work-exhample-item">
-            <a class="work-exhample-link link" href="">
-              <img
-                src="./images/portfolio/screen-illustrations.jpg"
-                alt="Screens of mobilr phones"
-                width="360"
-                height="300"
-              />
-              <h2 class="work-exhample-title">Screen Illustrations</h2>
-              <p class="work-exhample-type">Design</p>
-            </a>
-          </li>
-          <li class="work-exhample-item">
-            <a class="work-exhample-link link" href="">
-              <img
-                src="./images/portfolio/online-courses.jpg"
-                alt="Study via mobile phone"
-                width="360"
-                height="300"
-              />
-              <h2 class="work-exhample-title">Online Courses</h2>
-              <p class="work-exhample-type">Marketing</p>
-            </a>
-          </li>
-          <li class="work-exhample-item">
-            <a class="work-exhample-link link" href="">
-              <img
-                src="./images/portfolio/instagram-stories.jpg"
-                alt="Plan of the Instagram story"
-                width="360"
-                height="300"
-              />
-              <h2 class="work-exhample-title">Instagram Stories Concept</h2>
-              <p class="work-exhample-type">Design</p>
-            </a>
-          </li>
-          <li class="work-exhample-item">
-            <a class="work-exhample-link link" href="">
-              <img
-                src="./images/portfolio/organic-food.jpg"
-                alt="Bag with organic food"
-                width="360"
-                height="300"
-              />
-              <h2 class="work-exhample-title">Organic Food</h2>
-              <p class="work-exhample-type">Web Site</p>
-            </a>
-          </li>
-          <li class="work-exhample-item">
-            <a class="work-exhample-link link" href="">
-              <img
-                src="./images/portfolio/fresh-coffee.jpg"
-                alt="Cup of coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="work-exhample-title">Fresh Coffee</h2>
-              <p class="work-exhample-type">Web Site</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 hidden>Portfolio</h1>
+          <ul class="filter-buttons-list list">
+            <li class="filter-buttons-item">
+              <button class="exhample-filter-button" type="button">All</button>
+            </li>
+            <li class="filter-buttons-item">
+              <button class="exhample-filter-button" type="button">
+                Web Site
+              </button>
+            </li>
+            <li class="filter-buttons-item">
+              <button class="exhample-filter-button" type="button">App</button>
+            </li>
+            <li class="filter-buttons-item">
+              <button class="exhample-filter-button" type="button">
+                Design
+              </button>
+            </li>
+            <li class="filter-buttons-item">
+              <button class="exhample-filter-button" type="button">
+                Marketing
+              </button>
+            </li>
+          </ul>
+          <ul class="work-exhamples-list list">
+            <li class="work-exhample-item">
+              <a class="work-exhample-link link" href="">
+                <img
+                  src="./images/portfolio/banking-app.jpg"
+                  alt="Screens of babk applications"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="work-exhample-title">
+                  Banking App Interface Concept
+                </h2>
+                <p class="work-exhample-type">App</p>
+              </a>
+            </li>
+            <li class="work-exhample-item">
+              <a class="work-exhample-link link" href="">
+                <img
+                  src="./images/portfolio/cashless-payment.jpg"
+                  alt="Payment by mobile phone"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="work-exhample-title">Cashless Payment</h2>
+                <p class="work-exhample-type">Marketing</p>
+              </a>
+            </li>
+            <li class="work-exhample-item">
+              <a class="work-exhample-link link" href="">
+                <img
+                  src="./images/portfolio/meditation-app.jpg"
+                  alt="Psychological application Screen"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="work-exhample-title">Meditation App</h2>
+                <p class="work-exhample-type">App</p>
+              </a>
+            </li>
+            <li class="work-exhample-item">
+              <a class="work-exhample-link link" href="">
+                <img
+                  src="./images/portfolio/taxi-service.jpg"
+                  alt="taxi driver's application"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="work-exhample-title">Taxi Service</h2>
+                <p class="work-exhample-type">Marketing</p>
+              </a>
+            </li>
+            <li class="work-exhample-item">
+              <a class="work-exhample-link link" href="">
+                <img
+                  src="./images/portfolio/screen-illustrations.jpg"
+                  alt="Screens of mobilr phones"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="work-exhample-title">Screen Illustrations</h2>
+                <p class="work-exhample-type">Design</p>
+              </a>
+            </li>
+            <li class="work-exhample-item">
+              <a class="work-exhample-link link" href="">
+                <img
+                  src="./images/portfolio/online-courses.jpg"
+                  alt="Study via mobile phone"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="work-exhample-title">Online Courses</h2>
+                <p class="work-exhample-type">Marketing</p>
+              </a>
+            </li>
+            <li class="work-exhample-item">
+              <a class="work-exhample-link link" href="">
+                <img
+                  src="./images/portfolio/instagram-stories.jpg"
+                  alt="Plan of the Instagram story"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="work-exhample-title">Instagram Stories Concept</h2>
+                <p class="work-exhample-type">Design</p>
+              </a>
+            </li>
+            <li class="work-exhample-item">
+              <a class="work-exhample-link link" href="">
+                <img
+                  src="./images/portfolio/organic-food.jpg"
+                  alt="Bag with organic food"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="work-exhample-title">Organic Food</h2>
+                <p class="work-exhample-type">Web Site</p>
+              </a>
+            </li>
+            <li class="work-exhample-item">
+              <a class="work-exhample-link link" href="">
+                <img
+                  src="./images/portfolio/fresh-coffee.jpg"
+                  alt="Cup of coffee"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="work-exhample-title">Fresh Coffee</h2>
+                <p class="work-exhample-type">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
