--- a/index.html
+++ b/index.html
@@ -193,13 +193,15 @@
 
     <footer class="page-footer">
       <div class="container">
-        <a class="logo-text link" href="./index.html"
-          >Web<span class="logo-span-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-container">
+          <a class="logo-text link" href="./index.html"
+            >Web<span class="logo-span-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
