--- a/portfolio.html
+++ b/portfolio.html
@@ -10,46 +10,59 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="page-header">
-      <nav class="main-navigation">
-        <a class="logo-text link" href="./index.html"
-          >Web<span class="logo-span-header">Studio</span></a
-        >
-        <ul class="nav-menu list">
-          <li class="nav-menu-item">
-            <a class="nav-menu-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-menu-item">
-            <a class="nav-menu-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-menu-item">
-            <a class="nav-menu-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts-list list">
-          <li class="contacts-list-item">
-            <a class="contacts-list-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-list-item">
-            <a class="contacts-list-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="header-container container">
+        <nav class="main-navigation">
+          <a class="logo-text link" href="./index.html"
+            >Web<span class="logo-span-header">Studio</span></a
+          >
+          <ul class="nav-menu list">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-menu-item">
+              <a class="nav-menu-link link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li class="nav-menu-item">
+              <a class="nav-menu-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list list">
+            <li class="contacts-list-item">
+              <a
+                class="contacts-list-link link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-list-item">
+              <a class="contacts-list-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section class="work-exhamples-section">
         <div class="container">
-          <h1 hidden>Portfolio</h1>
+          <h1 class="visually-hidden">Portfolio</h1>
           <ul class="filter-buttons-list list">
             <li class="filter-buttons-item">
               <button class="exhample-filter-button" type="button">All</button>
@@ -82,10 +95,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="work-exhample-title">
-                  Banking App Interface Concept
-                </h2>
-                <p class="work-exhample-type">App</p>
+                <div class="exhample-info">
+                  <h2 class="work-exhample-title">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="work-exhample-type">App</p>
+                </div>
               </a>
             </li>
             <li class="work-exhample-item">
@@ -96,8 +111,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="work-exhample-title">Cashless Payment</h2>
-                <p class="work-exhample-type">Marketing</p>
+                <div class="exhample-info">
+                  <h2 class="work-exhample-title">Cashless Payment</h2>
+                  <p class="work-exhample-type">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="work-exhample-item">
@@ -108,8 +125,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="work-exhample-title">Meditation App</h2>
-                <p class="work-exhample-type">App</p>
+                <div class="exhample-info">
+                  <h2 class="work-exhample-title">Meditation App</h2>
+                  <p class="work-exhample-type">App</p>
+                </div>
               </a>
             </li>
             <li class="work-exhample-item">
@@ -120,8 +139,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="work-exhample-title">Taxi Service</h2>
-                <p class="work-exhample-type">Marketing</p>
+                <div class="exhample-info">
+                  <h2 class="work-exhample-title">Taxi Service</h2>
+                  <p class="work-exhample-type">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="work-exhample-item">
@@ -132,8 +153,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="work-exhample-title">Screen Illustrations</h2>
-                <p class="work-exhample-type">Design</p>
+                <div class="exhample-info">
+                  <h2 class="work-exhample-title">Screen Illustrations</h2>
+                  <p class="work-exhample-type">Design</p>
+                </div>
               </a>
             </li>
             <li class="work-exhample-item">
@@ -144,8 +167,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="work-exhample-title">Online Courses</h2>
-                <p class="work-exhample-type">Marketing</p>
+                <div class="exhample-info">
+                  <h2 class="work-exhample-title">Online Courses</h2>
+                  <p class="work-exhample-type">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="work-exhample-item">
@@ -156,8 +181,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="work-exhample-title">Instagram Stories Concept</h2>
-                <p class="work-exhample-type">Design</p>
+                <div class="exhample-info">
+                  <h2 class="work-exhample-title">Instagram Stories Concept</h2>
+                  <p class="work-exhample-type">Design</p>
+                </div>
               </a>
             </li>
             <li class="work-exhample-item">
@@ -168,8 +195,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="work-exhample-title">Organic Food</h2>
-                <p class="work-exhample-type">Web Site</p>
+                <div class="exhample-info">
+                  <h2 class="work-exhample-title">Organic Food</h2>
+                  <p class="work-exhample-type">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="work-exhample-item">
@@ -180,8 +209,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="work-exhample-title">Fresh Coffee</h2>
-                <p class="work-exhample-type">Web Site</p>
+                <div class="exhample-info">
+                  <h2 class="work-exhample-title">Fresh Coffee</h2>
+                  <p class="work-exhample-type">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
@@ -189,13 +220,17 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a class="logo-text link" href="./index.html"
-        >Web<span class="logo-span-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="footer-container">
+          <a class="logo-text link" href="./index.html"
+            >Web<span class="logo-span-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
