--- a/index.html
+++ b/index.html
@@ -150,8 +150,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-member-name">Mark Guerrero</h3>
-              <p class="team-member-position">Product Designer</p>
+              <div class="team-member-description">
+                <h3 class="team-member-name">Mark Guerrero</h3>
+                <p class="team-member-position">Product Designer</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -161,8 +163,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-member-name">Tom Ford</h3>
-              <p class="team-member-position">Frontend Developer</p>
+              <div class="team-member-description">
+                <h3 class="team-member-name">Tom Ford</h3>
+                <p class="team-member-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -172,8 +176,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-member-name">Camila Garcia</h3>
-              <p class="team-member-position">Marketing</p>
+              <div class="team-member-description">
+                <h3 class="team-member-name">Camila Garcia</h3>
+                <p class="team-member-position">Marketing</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -183,8 +189,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-member-name">Daniel Wilson</h3>
-              <p class="team-member-position">UI Designer</p>
+              <div class="team-member-description">
+                <h3 class="team-member-name">Daniel Wilson</h3>
+                <p class="team-member-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -192,16 +200,14 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container">
-        <div class="footer-container">
+      <div class="container">        
           <a class="logo-text link" href="./index.html"
             >Web<span class="logo-span-footer">Studio</span></a
           >
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
-          </p>
-        </div>
+          </p>        
       </div>
     </footer>
   </body>
